--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,7 +11,24 @@
     padding: 3px;
     isolation: isolate;
   }
-  
+  .dropdown-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
+}
+#link4{
+  background-color: #f5f5f5;
+  border: 2px solid rgb(204, 204, 204); 
+}
+#link4_1{
+  background-color: #f5f5f5;
+  border: 2px solid rgb(204, 204, 204); /* Adjust the thickness and color as needed */
+}
+
+/* Expanded state for dropdown */
+.show {
+    max-height: 1000px; /* Adjust as needed for content */
+}
   .tailwind-button::before {
     content: "";
     position: absolute;
