--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -17,12 +17,15 @@
     transition: max-height 0.5s ease-out;
 }
 #link4{
-  background-color: #f5f5f5;
+  background-color: #f7f7f7;
   border: 2px solid rgb(204, 204, 204); 
 }
 #link4_1{
   background-color: #f5f5f5;
-  border: 2px solid rgb(204, 204, 204); /* Adjust the thickness and color as needed */
+  border-top: 2px solid rgb(204, 204, 204);  /* Top border thickness */
+  border-right: 0px solid rgb(204, 204, 204);  /* Right border thickness */
+  border-bottom: 2px solid rgb(204, 204, 204);  /* Bottom border thickness */
+  border-left: 1px solid rgb(204, 204, 204);    /* Left border thickness */
 }
 
 /* Expanded state for dropdown */
